# open-world

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat  build.sh
include/glad/: glad.h
src/: camera.cpp  camera.h  main.cpp  object.cpp  object.h  vertex.h  world.cpp  world.h
src/dependencies/: glad.c
src/maths/: mat4.h  math_utils.h  maths.h  quaternion.h  vec2.h  vec3.h  vec4.h
src/shaders/: fragmentShader.fs  fragmentShader.glsl  shader.cpp  shader.h  vertexShader.glsl  vertexShader.vs
